--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,4 @@
 @import "./styles/layout/itemDetail";
 @import "./styles/layout/itemList";
 @import "./styles/layout/button";
+@import "./styles/layout/cartDetail";
