--- a/src/styles/layout/_cartDetail.scss
+++ b/src/styles/layout/_cartDetail.scss
@@ -1,5 +1,18 @@
 .cart-detail {
   height: 100vh;
+
+  .cart-title {
+    text-align: center;
+    padding-top: 20rem;
+    padding-bottom: 2rem;
+    font-size: 6rem;
+  }
+  .cart-state {
+    padding: 3rem 2rem;
+    color: #000;
+    text-align: center;
+    font-size: 4rem;
+  }
 }
 
 %btn {
@@ -14,9 +27,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-items: center;
-  &:first-child {
-    padding-top: 20rem;
-  }
+  align-items: center;
+
   padding-bottom: 4em;
 
   .list-img {
@@ -44,6 +56,18 @@
     -webkit-box-shadow: 9px 9px 10px -7px rgba(28, 40, 51, 1);
     -moz-box-shadow: 9px 9px 10px -7px rgba(28, 40, 51, 1);
     box-shadow: 9px 9px 10px -7px rgba(28, 40, 51, 1);
+    align-self: center;
+    h3 {
+      font-size: 2rem;
+      align-self: center;
+    }
+    p {
+      font-size: 1.5rem;
+      align-self: center;
+      span {
+        font-weight: 600;
+      }
+    }
   }
   .unity-controls {
     grid-column: 3 / 4;
@@ -73,116 +97,41 @@
       background-color: #000000;
     }
   }
-}
 
-%card-box {
-  padding: 20px;
-  text-align: center;
-}
-
-.card-grid {
-  @extend %card-box;
-  padding: 1rem 5rem 10rem 5rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-
-  h2,
-  h3,
-  p {
-    color: #010b13;
-  }
-
-  h2 {
-    padding: 1rem;
-    font-size: 1.5rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-  }
-
-  h3 {
-    padding-top: 1rem;
-    font-size: 1.2rem;
-    font-weight: 800;
-  }
-
-  p {
-    padding: 1rem 0;
-    font-size: 1rem;
+  .btn-remove {
+    font-size: 3rem;
   }
 }
 
-%card-box {
+.order-summary {
+  align-items: center;
   display: flex;
+  height: 6rem;
+  width: auto;
   padding: 20px;
-  text-align: center;
   justify-content: center;
-}
-
-.card-grid_detail {
-  justify-content: center;
-  padding: 20rem 5rem 10rem 5rem;
-
-  .card-item {
-    display: grid;
-    grid-template-columns: 1fr 2fr; // Dos columnas: 1/3 para card-detail, 2/3 para card-info
-    gap: 20px; // Espacio entre las columnas
-    align-items: center; // Centrar verticalmente
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; // Alinea el contenido a la izquierda
+  border: #d5d8dc 0.5px solid;
+  border-radius: 1rem;
+  -webkit-box-shadow: 9px 9px 10px -7px rgba(28, 40, 51, 1);
+  -moz-box-shadow: 9px 9px 10px -7px rgba(28, 40, 51, 1);
+  box-shadow: 9px 9px 10px -7px rgba(28, 40, 51, 1);
+  align-self: center;
+  h3 {
+    font-size: 2rem;
+    align-self: center;
   }
-
-  .card-detail {
-    grid-column: 1 / 2; // Se asegura que esté en la primera columna
-    @extend %card-box;
-    img {
-      width: 400px;
-    }
-  }
-
-  .card-info {
-    grid-column: 2 / 3; // Se asegura que esté en la segunda columna
-    @extend %card-box;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; // Alinea el contenido a la izquierda
-    border: #d5d8dc 0.5px solid;
-    border-radius: 1rem;
-    -webkit-box-shadow: 9px 9px 10px -7px rgba(28, 40, 51, 1);
-    -moz-box-shadow: 9px 9px 10px -7px rgba(28, 40, 51, 1);
-    box-shadow: 9px 9px 10px -7px rgba(28, 40, 51, 1);
-
-    h2,
-    h3,
-    p {
-      color: #010b13;
-    }
-
-    h2 {
-      background-color: #000000;
-      color: #ffffff;
-      border-radius: 1rem;
-      padding: 1rem;
-      font-size: 3rem;
-      font-weight: 700;
-      margin-bottom: 1rem;
-    }
-
-    h3 {
-      padding-top: 1rem;
-      font-size: 2rem;
-      font-weight: 800;
-    }
-
-    p {
-      padding: 1rem 0;
-      font-size: 1.3rem;
-    }
-  }
-}
-
-.stock-count {
-  font-weight: 700;
-  span {
-    font-weight: 800;
+  p {
     font-size: 1.5rem;
+    align-self: center;
+    span {
+      font-weight: 600;
+    }
+  }
+  .btn-clear {
+    @extend %btn;
+    background-color: #ffc300;
   }
 }
